--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <header>
-        <h1> Vamos contar</h1>
+        <h1> Vamos Contar</h1>
         <section>
             <div="dados">
-                <p>Inicio:</p>
-                <p>Fim:</p>
+                <p>Inicio:<input type="number"nome="inicio" id="txti"></p>
+                <p>Fim:<input type="number"nome="fim" id="txtf"></p>
+                <p>Passo:<input type="number"nome="passo" id="txtp"></p>
 
             </div>
             <div id="res">
