--- a/index.html
+++ b/index.html
@@ -8,25 +8,23 @@
 </head>
 <body>
     <header>
-        <h1> Vamos Contar</h1>
-        <section>
-            <div="dados">
-                <p>Inicio:<input type="number"nome="inicio" id="txti"></p>
-                <p>Fim:<input type="number"nome="fim" id="txtf"></p>
-                <p>Passo:<input type="number"nome="passo" id="txtp"></p>
+        <h1>Vamos Contar</h1>
+ </header>
 
-            </div>
-            <div id="res">
-                Preparando a contagem...
-
-            </div>
-
-        </section>
-
-    </header>
-       
-
-   
-    
+<section>
+    <div="dados">
+         <p>Inicio:<input type="number"nome="inicio" id="txti"></p>
+         <p>Fim:<input type="number"nome="fim" id="txtf"></p>
+         <p>Passo:<input type="number"nome="passo" id="txtp"></p>
+    </div>
+    <div id="res">
+         Preparando a contagem...
+    </div>
+</section>
+<footer>
+    <p>&copy : Cursoemvideo</p>
+    <p>Aluna: Patricia Oliveira</p>
+</footer>
+<script src="script.js"> </script>      
 </body>
 </html>
