--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
          <p>Inicio:<input type="number"nome="inicio" id="txti"></p>
          <p>Fim:<input type="number"nome="fim" id="txtf"></p>
          <p>Passo:<input type="number"nome="passo" id="txtp"></p>
+         <p><input type="button" value="contar" onclick="contar()"></p>
     </div>
     <div id="res">
          Preparando a contagem...
